--- a/cover.html
+++ b/cover.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0d0d0d" />
-  <title>《Crypto简史》</title>
+  <title>Crypto简史</title>
   <style>
     :root {
       --fg:#eaeef9;
@@ -135,7 +135,7 @@
   </div>
 
   <div class="cta-wrap">
-    <a class="cta" href="./index.html?v6" aria-label="开始阅读，进入章节列表">
+    <a class="cta" href="./index.html?v8" aria-label="开始阅读，进入章节列表">
       开始阅读
       <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
         <path d="M5 12h14M13 5l7 7-7 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
