--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     #cshell-app { position: fixed; inset: 0; background: var(--cshell-bg); color: var(--cshell-fg);
       font-family: -apple-system,BlinkMacSystemFont,"SF Pro Text","PingFang SC","Hiragino Sans GB","Segoe UI",Roboto,Arial,"Noto Sans CJK SC",sans-serif; overflow: hidden; }
 
-    /* top reading progress (per chapter) */
+    /* top reading progress (per chapter scroll) */
     #cshell-progress { position: fixed; left:0; right:0; top:0; height: 3px; z-index:6; background: rgba(255,255,255,.06); }
     #cshell-progress.hidden { display:none; }
     #cshell-progress-bar { height:100%; width:0%; background: linear-gradient(90deg, var(--cshell-accent), var(--cshell-accent2)); transition: width .15s ease; }
@@ -28,7 +28,7 @@
     .cshell-item { display:flex; align-items:center; justify-content:space-between; gap:10px; padding:14px 14px; border:1px solid var(--cshell-border); border-radius:12px; background: var(--cshell-card); }
     .cshell-item a { color:#fff; text-decoration:none; font-weight:600; }
 
-    .cshell-resume { margin:10px 0 2px; padding:10px 12px; border:1px dashed rgba(122,162,255,.35); border-radius:10px; color:#d9e2ff; background: rgba(122,162,255,.08); display:flex; justify-content:space-between; align-items:center; gap:8px; }
+    .cshell-resume { margin:16px 0 2px; padding:10px 12px; border:1px dashed rgba(122,162,255,.35); border-radius:10px; color:#d9e2ff; background: rgba(122,162,255,.08); display:flex; justify-content:space-between; align-items:center; gap:8px; }
     .cshell-resume button { background: linear-gradient(135deg, var(--cshell-accent), var(--cshell-accent2)); color:#fff; border:none; padding:8px 12px; border-radius:999px; }
 
     .cshell-bmk { display:flex; align-items:center; justify-content:space-between; gap:8px; padding:12px; border:1px solid var(--cshell-border); border-radius:12px; background: var(--cshell-card); }
@@ -142,7 +142,7 @@
     function show(el){ el.classList.remove('cshell-hidden'); }
     function hide(el){ el.classList.add('cshell-hidden'); }
     function toast(msg='已添加到书签'){ $toast.textContent = msg; $toast.classList.add('show'); setTimeout(()=> $toast.classList.remove('show'), 1400); }
-    function loadJSON(url){ return fetch(url).then(r=>r.json()); }
+    function loadJSON(url){ return fetch(url).then(r=>{ if(!r.ok) throw new Error('fetch failed'); return r.json(); }); }
     function getLast(){ try { return JSON.parse(LS.getItem(KEY_LAST) || 'null'); } catch(e){ return null; } }
     function setLast(obj){ try { LS.setItem(KEY_LAST, JSON.stringify(obj)); } catch(e){} }
     function getBmk(){ try { return JSON.parse(LS.getItem(KEY_BMK) || '[]'); } catch(e){ return []; } }
@@ -189,13 +189,11 @@
       t = Math.max(0, Math.min(1, t));
       const stages = [];
       if (t < 0.15) return [t];
-      // Always warm up layout a bit to reduce jumps
       stages.push(0.2);
       if (t > 0.35) stages.push(0.5);
       if (t > 0.70) stages.push(0.8);
       if (t > 0.90) stages.push(0.95);
       stages.push(t);
-      // remove duplicates and ensure ascending
       const uniq = [...new Set(stages)].sort((a,b)=>a-b);
       return uniq;
     }
@@ -216,7 +214,17 @@
     $tabBmk.addEventListener('click', ()=> selectTab('bmk'));
 
     async function initTOC(){
-      CHAPTERS = await loadJSON('./chapters.json');
+      try{
+        CHAPTERS = await loadJSON('./chapters.json');
+      }catch(e){
+        // fallback to a minimal sample so页面至少能打开
+        CHAPTERS = [
+          {"title":"第一编_绪论：从密码学到加密货币","file":"chapters/01.html","part":"第一编"},
+          {"title":"第一编_比特币白皮书要义","file":"chapters/02.html","part":"第一编"},
+          {"title":"第一编_中本聪的设计取舍","file":"chapters/03.html","part":"第一编"},
+          {"title":"第一编_早期社区与扩散","file":"chapters/04.html","part":"第一编"}
+        ];
+      }
       $chapterList.innerHTML = '';
       for (let i=0;i<CHAPTERS.length;i++){
         const c = CHAPTERS[i];
@@ -248,7 +256,6 @@
     }
 
     function toTOC(){
-      // snapshot before leaving
       snapshotProgress();
       if (scrollTimer){ clearInterval(scrollTimer); scrollTimer = null; }
       hide($reader); hide($nav); hide($bookmarkBtn);
@@ -264,16 +271,24 @@
       if ($progress) $progress.classList.remove('hidden');
       $prev.disabled = (i<=0); $next.disabled = (i>=CHAPTERS.length-1);
       setPageProgress(i);
+
+      // 先得到目标比例（与书签一致的方式），再保存为 last，避免被 0 覆盖
+      let targetRatio = 0;
+      const prev = getLast();
+      if (opts.restoreLast && prev && prev.index === i && typeof prev.scrollRatio === 'number'){
+        targetRatio = prev.scrollRatio || 0;
+      } else if (opts.restoreFromBookmark){
+        const bm = (getBmk().filter(b=>b.index===i).sort((a,b)=>(b.ts||0)-(a.ts||0)))[0];
+        if (bm) targetRatio = bm.scrollRatio || 0;
+      }
+      setLast({ index:i, file:ch.file, title:ch.title, scrollRatio: targetRatio });
+      setScrollProgress(targetRatio);
+
       $frame.src = `./chapters/${encodeURIComponent(ch.file)}`;
-      setLast({ index:i, file:ch.file, title:ch.title, scrollRatio:0 });
       $frame.onload = async ()=>{
         try {
           const doc = $frame.contentDocument;
           const style = doc.createElement('style'); style.textContent = `html,body{margin:0!important;padding:0!important;}`; doc.head.appendChild(style);
-          const last = getLast();
-          let targetRatio = 0;
-          if (opts.restoreLast && last && last.index===i && typeof last.scrollRatio==='number'){ targetRatio = last.scrollRatio; }
-          else if (opts.restoreFromBookmark){ const list = getBmk().filter(b=>b.index===i).sort((a,b)=>(b.ts||0)-(a.ts||0)); if (list[0]) targetRatio = list[0].scrollRatio || 0; }
           await segmentedRestore(doc, targetRatio);
 
           // live scroll update
