--- a/online.html
+++ b/online.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0d0d0d"/>
-  <title>《Crypto简史》 · 手机阅读书壳</title>
+  <title>Crypto简史 · 目录</title>
   <style>
     :root { --cshell-accent:#7aa2ff; --cshell-accent2:#9a7aff; --cshell-fg:#eaeaea; --cshell-muted:#9aa3b2; --cshell-bg:#0b0c12; --cshell-card:#12131a; --cshell-border:#1c1e26; }
     #cshell-app, #cshell-app * { box-sizing: border-box; }
@@ -28,7 +28,7 @@
     .cshell-item { display:flex; align-items:center; justify-content:space-between; gap:10px; padding:14px 14px; border:1px solid var(--cshell-border); border-radius:12px; background: var(--cshell-card); }
     .cshell-item a { color:#fff; text-decoration:none; font-weight:600; }
 
-    .cshell-resume { margin:10px 0 2px; padding:10px 12px; border:1px dashed rgba(122,162,255,.35); border-radius:10px; color:#d9e2ff; background: rgba(122,162,255,.08); display:flex; justify-content:space-between; align-items:center; gap:8px; }
+    .cshell-resume { margin:16px 0 2px; padding:10px 12px; border:1px dashed rgba(122,162,255,.35); border-radius:10px; color:#d9e2ff; background: rgba(122,162,255,.08); display:flex; justify-content:space-between; align-items:center; gap:8px; }
     .cshell-resume button { background: linear-gradient(135deg, var(--cshell-accent), var(--cshell-accent2)); color:#fff; border:none; padding:8px 12px; border-radius:999px; }
 
     .cshell-bmk { display:flex; align-items:center; justify-content:space-between; gap:8px; padding:12px; border:1px solid var(--cshell-border); border-radius:12px; background: var(--cshell-card); }
@@ -218,12 +218,26 @@
         CHAPTERS = await loadJSON('./chapters.json');
       }catch(e){
         // fallback to a minimal sample so页面至少能打开
-        CHAPTERS = [
-          {"title":"第一编_绪论：从密码学到加密货币","file":"chapters/01.html","part":"第一编"},
-          {"title":"第一编_比特币白皮书要义","file":"chapters/02.html","part":"第一编"},
-          {"title":"第一编_中本聪的设计取舍","file":"chapters/03.html","part":"第一编"},
-          {"title":"第一编_早期社区与扩散","file":"chapters/04.html","part":"第一编"}
-        ];
+        CHAPTERS = [{
+          "part": "第一编（1970s–2008）观念与技术的源流",
+          "title": "第一编_第1章_密码学奠基",
+          "file": "第一编_第1章_密码学奠基.html"
+        },
+        {
+          "part": "第一编（1970s–2008）观念与技术的源流",
+          "title": "第一编_第2章_赛博空间的政治",
+          "file": "第一编_第2章_赛博空间的政治.html"
+        },
+        {
+          "part": "第一编（1970s–2008）观念与技术的源流",
+          "title": "第一编_第3章_电子现金先驱",
+          "file": "第一编_第3章_电子现金先驱.html"
+        },
+        {
+          "part": "第一编（1970s–2008）观念与技术的源流",
+          "title": "第一编_第4章_未竟之业",
+          "file": "第一编_第4章_未竟之业.html"
+        }];
       }
       $chapterList.innerHTML = '';
       for (let i=0;i<CHAPTERS.length;i++){
