--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
     .cshell-toast { position: fixed; left:50%; transform: translateX(-50%); bottom: calc(64px + env(safe-area-inset-bottom)); background: rgba(0,0,0,.85); color:#fff; padding:10px 14px; border-radius:10px; z-index:7; opacity:0; transition:.25s opacity ease; }
     .cshell-toast.show { opacity:1; }
-  </style>
+  
+.cshell-chapno{opacity:.85;margin-right:.4em;white-space:nowrap;}
+    </style>
 </head>
 <body>
   <div id="cshell-app" aria-live="polite">
@@ -327,7 +329,8 @@
         }
         const li = document.createElement('li');
         li.className = 'cshell-item';
-        li.innerHTML = `<a href="#read?i=${i}" data-i="${i}">${c.title}</a>`;
+        const chapNo = i + 1;
+        li.innerHTML = `<a href="#read?i=${i}" data-i="${i}"><span class="cshell-chapno">第${chapNo}章</span>${c.title}</a>`;
         curUL.appendChild(li);
       }
 
