--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     #cshell-progress-bar { height:100%; width:0%; background: linear-gradient(90deg, var(--cshell-accent), var(--cshell-accent2)); transition: width .15s ease; }
 
     /* toc + bookmarks */
-    #cshell-toc { position:absolute; inset:0; padding: env(safe-area-inset-top) 12px calc(72px + env(safe-area-inset-bottom)) 12px; overflow:auto; }
+    #cshell-toc { position:absolute; inset:0; touch-action: pan-y; -webkit-overflow-scrolling: touch; overscroll-behavior-y: contain; padding: env(safe-area-inset-top) 12px calc(72px + env(safe-area-inset-bottom)) 12px; overflow:auto; }
     .cshell-tabs { display:flex; gap:10px; position:sticky; top: max(8px, env(safe-area-inset-top)); z-index:2; background: linear-gradient(180deg, rgba(11,12,18,.98), rgba(11,12,18,.8)); padding:8px 6px; border-radius:12px; border:1px solid var(--cshell-border); backdrop-filter: blur(6px); }
     .cshell-tab { flex:1; text-align:center; padding:10px 0; border-radius:10px; color: var(--cshell-muted); border:1px solid var(--cshell-border); background: var(--cshell-card); }
     .cshell-tab[aria-selected="true"] { color:#fff; background: linear-gradient(135deg, var(--cshell-card), rgba(122,162,255,.12)); border-color: rgba(122,162,255,.3); font-weight:600; }
@@ -37,7 +37,7 @@
     .cshell-bmk .act button { border:1px solid var(--cshell-border); background:transparent; color:#fff; padding:6px 10px; border-radius:8px; }
 
     #cshell-reader { position:absolute; inset:0; }
-    #cshell-frame { position:absolute; inset:0; width:100vw; height:100vh; border:none; background:#fff; }
+    #cshell-frame { position:absolute; inset:0; width:100vw; height:100dvh; border:none; background:#fff; }
 
     #cshell-nav { position: fixed; left: 0; right: 0; bottom: 10px; display:flex; justify-content:center; pointer-events:none; z-index: 5; }
     .cshell-nav-wrap { pointer-events:auto; display:flex; gap:10px; padding:8px; border-radius:16px; background: rgba(9,10,16,.8); border:1px solid var(--cshell-border); backdrop-filter: blur(10px); }
@@ -55,7 +55,15 @@
     .cshell-toast.show { opacity:1; }
   
 .cshell-chapno{opacity:.85;margin-right:.4em;white-space:nowrap;}
-    </style>
+    
+    /* Mobile scroll safety: keep overlays from eating gestures */
+    #cshell-nav { pointer-events: none; }
+    .cshell-nav-wrap, .cshell-nav-wrap * { pointer-events: auto; }
+
+    /* Make the main containers explicit scroll areas */
+    html, body { -webkit-overflow-scrolling: touch; overscroll-behavior-y: contain; }
+
+  </style>
 </head>
 <body>
   <div id="cshell-app" aria-live="polite">
@@ -457,5 +465,24 @@
 
   })();
   </script>
+
+  // --- Mobile viewport fit (iOS Safari 100vh fix) ---
+  (function(){
+    function fitViewport(){
+      var h = window.innerHeight;
+      var fr = document.getElementById('cshell-frame');
+      if (fr) fr.style.height = h + 'px';
+      // If there are other absolute full-viewport containers, set their min-height for safety
+      var reader = document.getElementById('cshell-reader');
+      if (reader) reader.style.minHeight = h + 'px';
+      var toc = document.getElementById('cshell-toc');
+      if (toc) toc.style.minHeight = h + 'px';
+    }
+    window.addEventListener('resize', fitViewport);
+    window.addEventListener('orientationchange', fitViewport);
+    document.addEventListener('DOMContentLoaded', fitViewport);
+    fitViewport();
+  })();
+
 </body>
 </html>
