--- a/index.html
+++ b/index.html
@@ -387,20 +387,16 @@
     }
 
     
-
 function renderBookmarks(){
-  // Load raw list
   const raw = getBmk() || [];
-  // Deduplicate by chapter index, keep the latest ts
+  // Dedup by chapter index, keep latest ts
   const map = new Map();
   for (const b of raw){
-    const existing = map.get(b.index);
-    if (!existing || (b.ts||0) > (existing.ts||0)){ map.set(b.index, b); }
+    const ex = map.get(b.index);
+    if (!ex || (b.ts||0) > (ex.ts||0)) map.set(b.index, b);
   }
   const list = Array.from(map.values()).sort((a,b)=> (b.ts||0)-(a.ts||0));
-
-  // Persist canonical unique list back to storage
-  setBmk(list);
+  setBmk(list); // persist canonical unique list
 
   $bmkItems.innerHTML = '';
   if (!list.length){ show($bmkEmpty); return; } else { hide($bmkEmpty); }
@@ -410,14 +406,10 @@ function renderBookmarks(){
     li.className = 'cshell-bmk';
     const c = CHAPTERS[bmk.index] || {title:bmk.title || '未知章节', file:bmk.file || ''};
     const chapNo = (bmk.index||0) + 1;
-    const pct = Math.round(((bmk.scrollRatio||0) * 100));
-    // Human-readable time
-    const t = bmk.ts ? new Date(bmk.ts) : null;
-    const tstr = t ? (t.getFullYear()+'-'+String(t.getMonth()+1).padStart(2,'0')+'-'+String(t.getDate()).padStart(2,'0')+' '+String(t.getHours()).padStart(2,'0')+':'+String(t.getMinutes()).padStart(2,'0')) : '';
-
+    const pct = Math.round(((bmk.scrollRatio||0)*100));
     li.innerHTML = `<div>
         <div><strong><span class="cshell-chapno">第${chapNo}章</span>${c.title}</strong></div>
-        <div class="meta">${pct}%${tstr ? ' · '+tstr : ''}</div>
+        <div class="meta">${pct}%</div>
       </div>
       <div class="act">
         <button data-act="go" data-i="${bmk.index}">前往</button>
@@ -439,67 +431,7 @@ function renderBookmarks(){
     btn.addEventListener('click', ()=> {
       const k = parseInt(btn.getAttribute('data-k'),10);
       const cur = getBmk() || [];
-      if (k>=0 && k<cur.length){
-        cur.splice(k,1);
-        setBmk(cur);
-      }
-      renderBookmarks();
-      toast('书签已删除');
-    });
-  });
-}
-  }
-  const list = Array.from(map.values()).sort((a,b)=> (b.ts||0)-(a.ts||0));
-
-  $bmkItems.innerHTML = '';
-  if (!list.length){ show($bmkEmpty); return; } else { hide($bmkEmpty); }
-
-  list.forEach((bmk, idx) => {
-    const li = document.createElement('li');
-    li.className = 'cshell-bmk';
-    const c = CHAPTERS[bmk.index] || {title:bmk.title || '未知章节', file:bmk.file || ''};
-    const chapNo = (bmk.index||0) + 1;
-    const pct = Math.round(((bmk.scrollRatio||0) * 100));
-    // Human-readable time
-    const t = bmk.ts ? new Date(bmk.ts) : null;
-    const tstr = t ? (t.getFullYear()+'-'+String(t.getMonth()+1).padStart(2,'0')+'-'+String(t.getDate()).padStart(2,'0')+' '+String(t.getHours()).padStart(2,'0')+':'+String(t.getMinutes()).padStart(2,'0')) : '';
-
-    li.innerHTML = `<div>
-        <div><strong><span class="cshell-chapno">第${chapNo}章</span>${c.title}</strong></div>
-        <div class="meta">${pct}%${tstr ? ' · '+tstr : ''}</div>
-      </div>
-      <div class="act">
-        <button data-act="go" data-i="${bmk.index}">前往</button>
-        <button data-act="del" data-k="${idx}">删除</button>
-      </div>`;
-    $bmkItems.appendChild(li);
-  });
-
-  // Actions
-  QSA('button[data-act="go"]', $bmkItems).forEach(btn => {
-    btn.addEventListener('click', ()=> {
-      const i = parseInt(btn.getAttribute('data-i'),10);
-      openChapter(i, { restoreFromBookmark: true });
-      history.pushState({read:i}, '', `#read?i=${i}`);
-      selectTab('toc');
-    });
-  });
-  QSA('button[data-act="del"]', $bmkItems).forEach(btn => {
-    btn.addEventListener('click', ()=> {
-      const k = parseInt(btn.getAttribute('data-k'),10);
-      const raw2 = getBmk() || [];
-      // Delete the k-th item in *rendered* list: rebuild dedup map, remove matching entry, save back
-      const map2 = new Map();
-      for (const b of raw2){
-        const existed = map2.get(b.index);
-        if (!existed || (b.ts||0) > (existed.ts||0)){ map2.set(b.index, b); }
-      }
-      const list2 = Array.from(map2.values()).sort((a,b)=> (b.ts||0)-(a.ts||0));
-      if (k>=0 && k<list2.length){
-        const removed = list2.splice(k,1)[0];
-        // Write back as flat list (unique)
-        setBmk(list2);
-      }
+      if (k>=0 && k<cur.length){ cur.splice(k,1); setBmk(cur); }
       renderBookmarks();
       toast('书签已删除');
     });
@@ -575,12 +507,10 @@ function renderBookmarks(){
         let ratio = 0;
         try { const doc = $frame.contentDocument; ratio = pxToRatio(doc); } catch(e){ ratio = 0; }
 
-        // Unique-per-chapter: if exists, update scrollRatio & ts; else insert new at head
+        // Unique per chapter: update if exists, else add new
         const idx = list.findIndex(b => b.index === currentIndex);
         if (idx >= 0){
-          // Update existing
           const updated = Object.assign({}, list[idx], { scrollRatio: ratio, ts: Date.now(), file: ch.file, title: ch.title });
-          // Move to head to reflect recency
           list.splice(idx, 1);
           list.unshift(updated);
           setBmk(list.slice(0,200));
@@ -594,20 +524,20 @@ function renderBookmarks(){
         }
       } catch(e){ toast('无法添加书签'); }
     });
+    
 
-
-    window.addEventListener('popstate', ()=>{ const hash = location.hash || ''; if (hash.startsWith('#read')){ const params = new URLSearchParams(hash.split('?')[1] || ''); const i = parseInt(params.get('i') || '-1', 10); if (!isNaN(i) && i>=0){ openChapter(i, { restoreFromBookmark: true }); } } else { toTOC(); } });
+    window.addEventListener('popstate', ()=>{ const hash = location.hash || ''; if (hash.startsWith('#read')){ const params = new URLSearchParams(hash.split('?')[1] || ''); const i = parseInt(params.get('i') || '-1', 10); if (!isNaN(i) && i>=0){ openChapter(i, { restoreLast: true }); } } else { toTOC(); } });
 
     (async function boot(){
       await initTOC();
-      if (location.hash.startsWith('#read')){ const params = new URLSearchParams(location.hash.split('?')[1] || ''); const i = parseInt(params.get('i') || '-1', 10); if (!isNaN(i) && i>=0){ openChapter(i, { restoreFromBookmark: true }); return; } }
+      if (location.hash.startsWith('#read')){ const params = new URLSearchParams(location.hash.split('?')[1] || ''); const i = parseInt(params.get('i') || '-1', 10); if (!isNaN(i) && i>=0){ openChapter(i, { restoreLast: true }); return; } }
       toTOC();
     })();
 
   })();
   </script>
-
-  // --- Mobile viewport fit (iOS Safari 100vh fix) ---
+<script>
+// --- Mobile viewport fit (iOS Safari 100vh fix) ---
   (function(){
     function fitViewport(){
       var h = window.innerHeight;
@@ -661,3 +591,4 @@ function renderBookmarks(){
 
 </body>
 </html>
+</script>
